[gd_scene load_steps=8 format=3 uid="uid://dqn8nuwp0npee"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_7rwpp"]
[ext_resource type="Script" path="res://panels/Pad/Pad.gd" id="1_50agd"]
[ext_resource type="Texture2D" uid="uid://cciy4j4akeigb" path="res://assets/icons/Corner.svg" id="2_vjtbs"]
[ext_resource type="Texture2D" uid="uid://cy00mft7cc64b" path="res://assets/icons/Mouse.svg" id="3_ejed3"]
[ext_resource type="PackedScene" uid="uid://cg60ugredi103" path="res://components/ComponentMethodPicker/ComponentMethodPicker.tscn" id="4_3qam2"]

[sub_resource type="LabelSettings" id="LabelSettings_2bj0m"]
font_color = Color(0.352941, 0.352941, 0.352941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ksiho"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.205117, 0.205117, 0.205117, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.309804, 0.309804, 0.309804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Pad" type="Control" node_paths=PackedStringArray("top_left_method_button", "top_right_method_button", "top_left_label", "top_right_label", "cursor", "settings_node", "method_picker")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1720.0
offset_bottom = -880.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7rwpp")
script = ExtResource("1_50agd")
top_left_method_button = NodePath("Settings/TopLeftMethodButton")
top_right_method_button = NodePath("Settings/TopRightMethodButton")
top_left_label = NodePath("TopLeftLabel")
top_right_label = NodePath("TopRightLabel")
cursor = NodePath("Cursor")
settings_node = NodePath("Settings")
method_picker = NodePath("ComponentMethodPicker")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Cursor" type="TextureRect" parent="."]
modulate = Color(0.560955, 0.560955, 0.560955, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = ExtResource("3_ejed3")

[node name="TopLeft" type="TextureRect" parent="."]
modulate = Color(0.351563, 0.351563, 0.351563, 1)
layout_mode = 1
offset_left = 3.0
offset_top = 3.0
offset_right = 27.0
offset_bottom = 27.0
mouse_filter = 2
texture = ExtResource("2_vjtbs")
expand_mode = 1

[node name="TopRight" type="TextureRect" parent="."]
modulate = Color(0.351563, 0.351563, 0.351563, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -3.0
offset_top = 3.0
offset_right = 21.0
offset_bottom = 27.0
grow_horizontal = 0
rotation = 1.5708
mouse_filter = 2
texture = ExtResource("2_vjtbs")
expand_mode = 1

[node name="BottomLeft" type="TextureRect" parent="."]
modulate = Color(0.351563, 0.351563, 0.351563, 1)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -3.0
offset_right = 27.0
offset_bottom = 21.0
grow_vertical = 0
rotation = -1.5708
mouse_filter = 2
texture = ExtResource("2_vjtbs")
expand_mode = 1

[node name="BottomRight" type="TextureRect" parent="."]
modulate = Color(0.351563, 0.351563, 0.351563, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -3.0
offset_right = 21.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 0
rotation = 3.14159
mouse_filter = 2
texture = ExtResource("2_vjtbs")
expand_mode = 1

[node name="TopLeftLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 63.0
offset_bottom = 29.0
text = "
"
label_settings = SubResource("LabelSettings_2bj0m")

[node name="TopRightLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = 29.0
grow_horizontal = 0
text = "
"
label_settings = SubResource("LabelSettings_2bj0m")

[node name="BottomLeftLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -29.0
offset_right = 63.0
offset_bottom = -6.0
grow_vertical = 0
text = "
"
label_settings = SubResource("LabelSettings_2bj0m")

[node name="BottomRightLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -29.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
text = "
"
label_settings = SubResource("LabelSettings_2bj0m")

[node name="CenterBottomLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -29.0
offset_right = 29.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
text = "
"
label_settings = SubResource("LabelSettings_2bj0m")

[node name="Settings" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -23.5
offset_right = 38.0
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2

[node name="TopLeftMethodButton" type="Button" parent="Settings"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Empty"

[node name="TopRightMethodButton" type="Button" parent="Settings"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Empty"

[node name="ComponentMethodPicker" parent="." instance=ExtResource("4_3qam2")]
visible = false
custom_minimum_size = Vector2(900, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -300.0
offset_right = 450.0
offset_bottom = 300.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_ksiho")

[node name="ComponentMethodPicker2" parent="." instance=ExtResource("4_3qam2")]
visible = false
custom_minimum_size = Vector2(900, 600)
layout_mode = 1
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_ksiho")

[connection signal="gui_input" from="PanelContainer" to="." method="_on_panel_container_gui_input"]
[connection signal="pressed" from="Settings/TopLeftMethodButton" to="." method="_on_top_left_method_button_pressed"]
[connection signal="pressed" from="Settings/TopRightMethodButton" to="." method="_on_top_right_method_button_pressed"]
[connection signal="cancled" from="ComponentMethodPicker" to="." method="_on_component_method_picker_cancled"]
